[package]
name = "fibonacci_number_generator"
version = "0.1.0"
authors = ["NSadikhov <nsadixov2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.7.1"
console = "0.14.0"
lazy_static = "1.4.0"
